wip: feature service
